--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
+    "@vercel/analytics": "^1.5.0",
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
     "react": "^19.1.0",
